<resources>
    <!--    Textos para la pantalla principal-->
    <string name="app_name">UNIPAY</string>
    <string name="buttonBack">BACK</string>
    <string name="txt_bienvenida">Bienvenido a UNIpay</string>
    <string name="txt_mensaje1P1">Envia y recibe dinero con nuestra app</string>
    <string name="txt_mensaje2P1">Lorem ipsum dolor asim amet</string>
    <string name="buttonP1">Comenzar</string>
    <string name="imgConten1">Transacciones de banco a banco</string>

    <!--    Textos para las pantalla 2-->
    <string name="txt_mensaje1P2">Enrolla tu UNIpay</string>
    <string name="txt_mensaje2P2">Elige tu cuenta</string>

    <string-array name="cuentas">
        <item>Seleccione una cuenta</item>
        <item>121647</item>
        <item>0192383</item>
        <item>83702</item>
        <item>02892878</item>
        <item>928019</item>
        <item>918200</item>
    </string-array>

    <string name="txt_mensaje3P2">En esta cuenta recibiras las transferencias en tu banco favorito</string>
    <string name="txt_mensaje4P2">Confirma tu número de teléfono</string>
    <string name="et_telefono">Confirme su numero de teléfono</string>
    <string name="txt_mensaje5P2">Tus contactos utilizaran este número para enviarte dinero</string>
    <string name="txt_mensaje6P2">Aceptar términos y condiciones</string>
    <string name="buttonP2">Continuar</string>

    <!--    Textos para la pantalla 3 otorgar permisos sobre los contactos-->
    <string name="uni">UNIpay</string>
    <string name="parrafoP3">UNIPay optimiza tu experiencia con el uso de los contactos de tu móvil y verifica con quienes puedes
        hacer más fácil tus transacciones</string>
    <string name="btnAceptarP3">Aceptar</string>
    <string name="texto1P3">Doy permiso para que UNIPay</string>
    <string name="texto2P3">acceda a mis contactos</string>
    <string name="botton">acceda a mis contactos</string>
    <string name="mensajeModal">"UNI-ACH" quiere acceder a tus contactos.</string>

    <!--    Textos para pantalla 4 Resumen UNIpay-->
    <string name="resumenUNI">Este es el resumen de tu UNIPay</string>
    <string name="resumenCuenta">Cuenta: </string>
    <string name="resumenTelefono">Teléfono: </string>
    <string name="resumenConfirmacion">Deseas que te notifiquemos?</string>
    <string name="resumenEmail">Email</string>
    <string name="resumenOpcional">Opcional</string>

    <!--    Textos para la pantalla transferir-->
    <string name="transferir">Transferir</string>
    <string name="telefonoAEnvar">Teléfono a enviar</string>
    <string name="monto">Monto</string>
    <string name="concepto">Concepto</string>
    <string name="signoDolar">$</string>
    <string name="descripcion">Pago extra</string>
    <string name="numeroTel">7655 5499</string>
    <string name="siguiente">Siguiente</string>

    <!--    Textos para la pantalla resumen de la transaccion-->
    <string name="resumenTransaccion">Resumen de la transacción</string>
    <string name="origen">Transacción desde cuenta:</string>
    <string name="beneficiario">Beneficiario:</string>
    <string name="nombreBeneficiario">Daniel Hernández 7877 8899</string>
    <string name="valor">Por el valor de:</string>
    <string name="conceptoResumen">Concepto</string>
    <string name="aceptarResumen">Aceptar</string>
    <string name="numeroCuenta">0982182</string>
    <string name="cantidad">1200</string>

    <!--    Textos para la pantalla cambiar Alias-->
    <string name="cambiarAlias">Cambiar Alias</string>
    <string name="introduceTuNuevaCuenta">Introduce tu nueva cuenta favorita</string>
    <string name="nuevaCuenta">Nueva cuenta</string>
    <string name="btnNueva">Guardar</string>

    <!--    Texto para la pantalla Datos de usuario-->
    <string name="nombreU">Nombre de usuario</string>
    <string name="numeroDeC">Número de cuenta</string>
    <string name="historialT">Historial de transacciones</string>
    <string name="convertirA">Convertir en alias</string>

    <!--    Texto para la pantalla historial de transacciones-->
    <string name="historialTransacciones">Historial de transacciones</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="origenTransaccion">Origen: </string>
    <string name="destinoTransaccion">Destino: </string>
    <string name="conceptoTransaccion">Concepto: </string>
    <string name="fechaCreacion">Fecha creación: </string>
    <string name="montoTransaccion">Monto</string>

    <!--    Texto para modal detalle historial de transacciones-->
    <string name="detalleTransaccion">Detalle de la transacción</string>
    <string name="cuentaOrigen">Cuenta origen: </string>
    <string name="montoModal">Monto: </string>
    <string name="numeroDeDestino">Número de destino: </string>
    <string name="correoDestino">Correo destino: </string>
    <string name="fechaCreacionModal">Fecha creación: </string>
    <string name="fechaAplicacion">Fecha aplicación: </string>
    <string name="creadoPor">Creado por: </string>
    <string name="conceptoModal">Concepto: </string>

    <string-array name="steps">
        <item>Origen y contactos</item>
        <item>Trnsferir</item>
        <item>Resumen</item>
    </string-array>

    <!--    Texto de descripcion para el floating action button-->
    <string name="fab_content_desc">Floating</string>

    <!--    Texto para el custom su transaccion fue realizada exitosamente-->
    <string name="exito">Su transacción fue realizada exitosamente.</string>
    <string name="btn_finalizar">Finalizar</string>

</resources>