<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".ui.permisos.EnrollaUni">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="@color/gray_claro"
                    android:elevation="4dp"
                    app:popupTheme="@style/AppTheme.AppBarOverlay"/>

        </com.google.android.material.appbar.AppBarLayout>


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/marginPantallasV"
            android:layout_marginTop="@dimen/marginPantallasV"
            android:layout_marginRight="@dimen/marginPantallasH"
            android:layout_marginLeft="@dimen/marginPantallasH"
            android:orientation="vertical">

                <TextView
                    android:id="@+id/tvMensaje1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:text="@string/txt_mensaje1P2"
                    android:textSize="@dimen/tvPantalla2"
                    android:layout_marginTop="@dimen/treintaSP"
                    android:textAlignment="center"
                    android:textColor="@color/azulito" />

                <TextView
                    android:id="@+id/tvMensaje2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:text="@string/txt_mensaje2P2"
                    android:textSize="@dimen/textoTerminos"
                    android:layout_marginTop="@dimen/treintaSP"
                    android:textColor="@color/azulito" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="3dp"
                    android:layout_weight=".28"
                    android:background="@drawable/style_spinner"
                    android:orientation="horizontal">

                        <Spinner
                            android:id="@+id/spCuentas"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/cuarentayochoDP"
                            android:layout_centerVertical="true"
                            android:layout_gravity="center"
                            android:background="@android:color/transparent"
                            android:gravity="center"
                            android:entries="@array/cuentas"
                            android:layout_marginLeft="5dp"
                            android:spinnerMode="dropdown" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:layout_marginRight="8dp"
                            android:layout_gravity="center"
                            android:src="@drawable/down_filled_triangular_arrow" />

                </RelativeLayout>

<!--                <Spinner-->
<!--                    android:id="@+id/spCuentas"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="@dimen/cuarentayochoDP"-->
<!--                    android:background="@drawable/style_spinner"-->
<!--                    android:entries="@array/cuentas"-->
<!--                    />-->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tvMensaje3"
                            android:layout_width="@dimen/trescientosDP"
                            android:layout_marginRight="@dimen/doceDP"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif"
                            android:text="@string/txt_mensaje3P2"
                            android:textSize="@dimen/tvPantalla2M3"
                            android:layout_marginTop="@dimen/treintaSP"
                            android:textColor="@color/azulito" />

                        <ImageButton
                            android:id="@+id/imgInfo"
                            android:layout_width="@dimen/cuarentayochoDP"
                            android:layout_height="@dimen/cuarentayochoDP"
                            android:layout_marginTop="@dimen/diezDP"
                            android:contentDescription="@string/buttonP1"
                            android:src="@mipmap/ic_info"
                            android:textAlignment="textStart"
                            tools:ignore="ImageContrastCheck" />

                </LinearLayout>

                <TextView
                    android:id="@+id/tvMensaje4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:text="@string/txt_mensaje4P2"
                    android:textSize="@dimen/textoTerminos"
                    android:layout_marginTop="@dimen/treintaSP"
                    android:textColor="@color/azulito" />

                <EditText
                    android:id="@+id/etConfirmarTelefono"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/alturaEditext"
                    android:hint="@string/et_telefono"
                    android:background="@drawable/estilo_editext"
                    android:inputType="number"
                    android:layout_marginTop="2dp"
                    />


                <TextView
                    android:id="@+id/tvMensaje5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:text="@string/txt_mensaje5P2"
                    android:textSize="@dimen/textoTerminos"
                    android:layout_marginTop="@dimen/diezDP"
                    android:textColor="@color/azulito" />

                <CheckBox android:id="@+id/cbTerminos"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/alturaCbx"
                    android:textSize="@dimen/textoTerminos"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/checkbox"
                    android:textColor="@color/azulito"
                    android:text="@string/txt_mensaje6P2"
                    />

                <Button
                    android:id="@+id/btnContinuar"
                    android:layout_width="@dimen/btnPantalla2"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/veinteDP"
                    android:text="@string/buttonP2"
                    android:textColor="@color/white"
                    android:background="@drawable/boton_continuar"
                    android:layout_marginBottom="@dimen/marginScrollBotton"
                    />

        </LinearLayout>

        </ScrollView>
</LinearLayout>